tests/codegen/errors/env/env/call.argument.type-mismatch/atom.menu.error.env.call.argument.type-mismatch.006/menu-env-call.argument.type-mismatch-006.mon
;; TEST-ID: tests.codegen.menu.errors.env.call.argument.type.mismatch.006
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: env/call.argument.type-mismatch
;; TEST-MENU: errors/env/call.argument.type-mismatch/atom.menu.error.env.call.argument.type-mismatch.006
;; TEST-MENU-PATH: codegen/errors/env/call.argument.type-mismatch/atom.menu.error.env.call.argument.type-mismatch.006
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin env.c diagnostic: Couldn't match expected type
;; TEST-ATOM: atom.menu.error.env.call.argument.type-mismatch.006
;; TEST-CODEGEN-ATOM: atom.menu.error.env.call.argument.type-mismatch.006
;; TEST-ATOM-LEAF: atom.menu.error.env.call.argument.type-mismatch.006
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: env
;; TEST-ERROR-FAMILY: call.argument.type-mismatch
;; TEST-ERROR-MESSAGE: Couldn't match expected type
;; TEST-ERROR-SOURCE: env.c
;; TEST-ERROR-PATH: env.c:975
;; TEST-CODEGEN-PATH: diagnostic.env.call.argument.type-mismatch
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: env
;; TEST-TAG: menu
;; TEST-COVERAGE: env.c:975 Couldn't match expected type
;; TEST-USES-ATOM: atom.menu.error.env.call.argument.type-mismatch.006
;; TEST-USES-ATOM: atom.error.env
;; TEST-USES-ATOM: atom.error.env.call.argument.type-mismatch
;; TEST-USES-ATOM: atom.env.error
;; TEST-DEPENDS-ON: atom.env.hm.check.call
;; TEST-DEPENDS-ON: atom.env.hm.infer.define
;; TEST-REFINES: atom.error.env
;; TEST-REFINES: atom.error.env.call.argument.type-mismatch
;; TEST-REFINES: atom.env.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors env env

(module Main)
(define (env_menu_arg_6_6 [x : Int] -> Int) x)
(show (env_menu_arg_6_6 "bad"))
